# transformer-evolution-llm

./: .agents.yml  .gitignore  AGENTS.md  Makefile  README.md  RUNS_HISTORY.md  STATUS.md  pyproject.toml  run_phi_creative_curriculum.sh  run_phi_creative_super_recur.sh  run_phi_promotion_mps.sh  run_phi_seed36_long_mps.sh
configs/: exp_longctx_discovery_m4.yaml  exp_longctx_overnight_m4.yaml  exp_longctx_overnight_m4_full_deck.yaml  exp_longctx_overnight_m4_unbiased.yaml  exp_longctx_overnight_m4_v2.yaml  exp_validation_m4.yaml  live_phi_creative.yaml  live_phi_creative_recur.yaml  live_phi_creative_recur_super.yaml  live_phi_feedback_seed.yaml  live_phi_multiblock.yaml  live_phi_tiny.yaml  live_smoke.yaml  mutation_templates.yaml  phi_tiny_base.yaml  scalehop_xover-68-8a93.yaml  seed_exp_sota_xover-25-549e.yaml  seed_memory_frontier.yaml  seed_small_frontier_probe.yaml  seed_small_frontier_rich.yaml  seed_small_frontier_rich_best.yaml  seed_small_frontier_rich_strict_deep.yaml  seed_small_frontier_rich_strong.yaml  seed_template_mutation-9-8563.yaml  seed_toggle_ssm_30_d493.yaml  seed_tune_kv-95-2e72.yaml  seed_xover-4-566d.yaml  seed_xover-48-9237.yaml  seed_xover-68-8a93.yaml  seed_xover-78-b857.yaml  seed_xover_36_37b0.yaml  seed_xover_39_204f.yaml
docs/: evolution_takeaways.md  gpu_run_plan.md  scale_policy.md
scripts/: archive_run.py  export_dsl_schema.py  export_seed.py  extract_lineage.py  fit_scaling.py  pick_and_finetune.py  render_lineage.py  render_lineage_subway.py  report_motifs.py  run_ablation.py  run_live.py
src/transformer_evolution_llm/: __init__.py  ablation.py  api.py  cache_builder.py  candidates.py  cli.py  dsl.py  (+14 more)
tests/: conftest.py  test_ablation.py  test_cache_and_logits.py  test_cli.py  test_crossover.py  test_data.py  test_dsl.py  test_evaluation.py  test_llm_live_stub.py  test_logits_cache.py  test_models.py  test_models_attention.py  test_morphology.py  test_mutations.py  test_orchestrator.py  test_orchestrator_live.py  test_plugins.py  test_template_mutation.py  test_trainer.py
(+91 files in other folders)
